# src/main/java/com/micronautlearning/user/jwtToken/LoginRequest.java
@@ -1,0 +1,6 @@
+package com.micronautlearning.user.jwtToken;
+
+import io.micronaut.serde.annotation.Serdeable;
+
+@Serdeable
+public record LoginRequest(String username, String password) {}
